editor/css/index.css
html,
body,
#editor {
  height: 100%;
  margin: 0;
  padding: 0;
}
body {
    padding-top: 70px;
    padding-bottom: 60px;
}

#editor,
#editor * {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

#editor .ui-content {
  height: inherit; /* inherit height without padding nor border */
}

#editor_content {
    background-color: #ddffff;
}
.blocklyText,
.blocklySvg text { /* for older version */
  fill:black;
}
.blocklyTreeIcon {
  visibility : hidden;
}

